# fzybindings

./: .gitignore  .spin  CONTRIBUTING.md  README.md  dune-project  esy.json  fzybindings.opam
esy.lock/: index.json
example/: dune  main.re
lib/: bindings.re  dune  utils.re  utils.rei
lib/stubs/: dune  fzybindings_stubs.re  gen_stubs.re
test/: dune  utils_test.re
test/support/: test_runner.re
